--- a/SMS/Components/Pages/StudentPages/Edit.razor
+++ b/SMS/Components/Pages/StudentPages/Edit.razor
@@ -3,6 +3,7 @@
 @using SMS.Models
 @inject NavigationManager NavigationManager
 @using Microsoft.EntityFrameworkCore
+@rendermode InteractiveServer
 
 <PageTitle>Edit</PageTitle>
 
@@ -58,6 +59,10 @@ else
 </div>
 
 @code {
+    [Inject]
+    public IJSRuntime JSRuntime { get; set; } = default!;
+    private string currentUser = string.Empty;
+
     [SupplyParameterFromQuery]
     public int Id { get; set; }
 
@@ -67,7 +72,7 @@ else
     protected override async Task OnInitializedAsync()
     {
         Student ??= await DB.SMS_Students.FirstOrDefaultAsync(m => m.Id == Id);
-
+        currentUser = await JSRuntime.InvokeAsync<string>("localStorage.getItem", "currentUser") ?? string.Empty;
         if (Student is null)
         {
             NavigationManager.NavigateTo("notfound");
@@ -78,6 +83,11 @@ else
     // For more details, see https://aka.ms/RazorPagesCRUD.
     public async Task UpdateStudent()
     {
+        // 获取当前用户名（假设页面有 currentUser 变量）
+        if (!string.IsNullOrEmpty(currentUser))
+        {
+            Student!.UpdateUser = currentUser;
+        }
         DB.Attach(Student!).State = EntityState.Modified;
 
         try
